Remove last bits of visible text by mpoh

--- a/conclusions/c_conclusions.tex
+++ b/conclusions/c_conclusions.tex
@@ -1,5 +1,6 @@
 
  \chapter{Conclusions}
+ % HUOM nämä mpohj kommentteja
 
  % kerrottiin softa-startupeista yleisellä tasolla
  % listattiin perinteisen softakehityksen laatumetodit eri elinkaaren vaiheissa sekä metodien tehokkuudesta
@@ -9,23 +10,8 @@
  % käsiteltiin case-projektin suoritus ja vaiheet 
  % käsiteltiin case-projektin toteutunut laatu haastattelujen perusteella
  
- In this thesis, quality improvement in a software startup environment was studied. Startup environment was examined from the viewpoint of Lean Startup methodology. Software quality was described both in traditional sense and in a software startup context. Thesis defined and evaluated software improvement methods and activities that were then linked into the startup environment and its view of software quality.
-
- A case project was also presented by describing its execution and phases in detail. Also the quality improvement methods used in the project were described. Quality achieved in the project was assessed with the data from interviews with both the development team and customers. These opinions were summarized for a view to overall quality. Some suggestions were also made for improving the quality and the development processes in the future.
 
 
  % ---Mitä opittiin/tehtiin---
- % sekä perinteisessä että modernissa softakehityksessä painotus laadun parannuksessa pitäisi olla virheiden estämisessä enemmän kuin niiden löytämisessä ja korjaamisessa
- % moderni startupin softakehitys koostuu lyhyistä iteraatioista ja muista agile-jutuista, joten perinteinen laatudvarmistus ei ole suoraan sovellettavissa startupiin
- % perinteiset laatumetodit on kuitenkin sellaisia, joita voi käyttää startupin modernissa kehityksessä
- % Perinteinen laadunvarmistus keskittyy enemmän teknisiin asioihin, kun modernissa kehityksessä fokus on enemmän ihmisissä ja tekemisen mallissa
-
-Improving quality in a software startup development emphasizes the importance of defect prevention over defect removal. This is common with traditional software development. In traditional software development though, the effort put to defect removal activities and testing has larger share of total effort than in startup environment. Another difference between these two environments is that in modern startup environment, the development is usually done in short iterations. The patterns in traditional development are not applicable in this kind of development as such, but the activities can be applied by adjusting them for use in short iterations. These patterns also usually require too much effort for a startup environment.
-
-When traditional quality improvement has more focus on the technical aspects, methodologies of modern software development quality focus on the people and processes of development. Both the team and individuals are considered important and the emphasis is on the motivation, expertise and leadership of the personnel. The development should include plenty of communication and the team should have all the resources and authority to make all the important decisions. The technical aspects to consider in software startups are the integrity of the product and the iterative development containing constant improvement.
 
 % Further research on the topic could focus more on the human aspects of the development and ignore the traditional software quality assurance. 
-
-In the future, topics regarding the human aspects of the development could be further researched. Building a motivating environment which embraces expertise and leadership seem to improve the efficiency of the team and eventually raise the quality of the software developed. In the further work the effect of these human factors could be examined in real projects. This examination could include good practices used in successful projects and pitfalls found in lower quality projects.
-
-In addition, individual activities used in modern software development could be inspected. Peer reviews and other means improving communication are widely used. In an experienced team with skilled professionals, communication acts an important part in achieving high quality. In addition, consistently more automatic tools aiding the development are used, which should make reaching high quality easier. The usage of these activities and processes in a successful startup environment could be an interesting topic for a research.
