--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -1,4 +1,4 @@
- 
+e 
 \thispagestyle{empty}
  
 \vspace*{-.5cm}\noindent
@@ -10,8 +10,8 @@
  
 \vspace{6.8cm}
  
-\noindent{\bf\large \textsf{Mikko Pohja}}\\
-{\bf\large \textsf{Quality control in a startup software project}}\\
+\noindent{\bf\large \textsf{Miro Nieminen}}\\
+{\bf\large \textsf{}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
@@ -37,32 +37,26 @@
 \begin{spacing}{1.0}
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
-{\bf \textsf{Mikko Pohja: Laadunhallinta startup-yrityksen ohjelmistoprojektissa}}\\
-\textsf{Diplomityö, 61 sivua}\\
-\textsf{Xxxxxkuu 2014}\\
+{\bf \textsf{Miro Nieminen: <otsikko>}}\\
+\textsf{Diplomityö, xx sivua}\\
+\textsf{Xxxxxkuu 2015}\\
 \textsf{Pääaine: }\\
 \textsf{Tarkastajat: }\\
 \textsf{Avainsanat: }\\
 \end{spacing}
  
 \noindent
-Moderni ohjelmistokehitys on tehnyt mahdolliseksi nopeiden prototyyppien kehityksen pienellä budjetilla ja lyhyellä aikataululla. Tästä on seurannut startup-yritysten nopea yleistyminen. Startup-yritykset voivat kokeilla ja kehittää liikeideaansa nopealla aikataululla käyttäen edistyneitä ohjelmistokehyksiä ja noudattaen ketterän ohjelmistokehityksen periaatteita. Kokenut tiimi kykenee luomaan toimivan prototyypin jo muutamassa viikossa.
+Tekstiä
  
 \noindent
-Nopea ohjelmistokehitys saattaa johtaa ohjelmiston lähdekoodin ja rakenteen huonoon laatuun, joka hidastaa ja vaikeuttaa kehitystä tulevaisuudessa. Ohjelmiston laatuun täytyy alkaa kiinnittää huomiota viimeistään siinä vaiheessa, kun liikeidea todetaan menestyväksi ja ohjelmiston kehitystä jatketaan prototyyppivaiheesta eteenpäin. Lisäksi startup-yrityksissä ohjelmiston laatu riippuu kriittisesti toteutettavan järjestelmän sopivuudesta kohderyhmälle. Tämän takia järjestelmän sopivuuden jatkuva validointi kehityksen aikana on tärkeä osa kehitystä.
-
-\noindent
-Tässä diplomityössä on käsitelty perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta. Myös startup-yrityksiä sekä niiden laatukäsitystä on tarkasteltu yleisellä tasolla. Lisäksi ohjelmistojen laadun parantamiseen käytettyjä tekniikoita on tarkasteltu startupin näkökulmasta sekä yhdistetty perinteisiä laatumenetelmiä startupille tyypilliseen laadunvarmistukseen. Lopuksi esitellään startup-yritykselle toteutettu ohjelmistoprojekti sekä käsitellään sen laadun toteutumista tehtyjen haastattelujen pohjalta.
-
-\noindent
-Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmistokehityksen ja modernin startup-yrityksen ohjelmistokehityksen välillä. Myös laadun parantamiseen käytetyt metodit eroavat näiden kehitysmuotojen välillä. Perinteiset menetelmät luottavat enemmän teknisiin lähestymistapoihin, joilla löydetään virheitä, kun taas modernissa laadunparannuksessa keskitytään enemmän ihmisiin ja kehitysprosessiin. Perinteiseen laadunparannukseen liittyviä teknisiä toimenpiteitä, kuten katselmointeja ja erilaisia testausmuotoja, voi kuitenkin soveltaa modernin laadunparannuksen osana. 
+Tekstiä
 
 \newpage
 \chapter*{ABSTRACT}
 \begin{spacing}{1.0}
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
-{\bf \textsf{Mikko Pohja : Quality control in a startup software project}}\\
+{\bf \textsf{Miro Nieminen: <otsikko>}}\\
 \textsf{Master of Science Thesis, 61 pages}\\
 \textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
@@ -72,27 +66,26 @@ Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmisto
  
  % Konteksti
 \noindent
-Progress in modern software development has enabled tiny prototypes that can be implemented with small budget and short schedule. Since proving the business ideas with fast prototyping has become so easy, the number of startup companies has begun to grow. A team with sufficient experience can implement a simple working prototype as fast as in weeks.
+Tekstiä
  
  % Ongelma
 \noindent
-Development of these simple prototypes can lead to poor quality of code and structure of the product, which can complicate the future development. This can become an issue if the business idea is indeed validated and proven to be successful.
+Tektsiä
 
  % Tässä diplomityössä (mitä tehty ratkaisemiseksi)
 \noindent
-This thesis discusses software quality in both traditional software development and software startup environment. Methods traditionally used for improving quality and their efficiency are presented. These methods are also joined to the quality methods recommended for software startup environment. Finally, this thesis presents an example project done for a software startup.
+Tekstiä
 
 % Arvio onnistumisesta
 \noindent
-Conclusions from this thesis include that the definition of quality and methods improving it vary between traditional software development and modern startup environment. In traditional software development, methods for improving quality are focused on technical activities discovering defects. In turn, modern methodologies concentrate more on people and processes. However, activities from traditional quality improvement can be applied to the methods recommended for startup environment.
-
+Tektsiä
 
 \newpage
  
 \chapter*{PREFACE}
 \noindent 
 
-Tässä on tapana vaan kiitellä kaikkia. Tämä nimenomainen templaattiin laitettu teksti on ihan tyhmä.
+Tässä on tapana vaan kiitellä kaikkia. Tämä nimenomainen templaattiin laitettu teksti on Mikko Pohjan mukaan "ihan tyhmä".
  
 \newpage
 \tableofcontents
