--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -29,7 +29,7 @@
 
  %% ---------------------------------------
  %% Introduction
-\input{general/c_intro}
+\input{introduction/c_intro}
  
 
 %% ---------------------------------------
@@ -49,7 +49,7 @@
 
 %% ---------------------------------------
 %% Results
-\input{results/c_results}
+\input{evaluation/c_evaluation}
 
 %% ---------------------------------------
 %% Discussion
@@ -59,11 +59,12 @@
 %% Conclusions
 \input{conclusions/c_conclusions}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	REFERENCES
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%% ---------------------------------------
+%% References
 \input{general/c_references}
  
+ 
 %\chapter{Liitteitä}
+
+
 \end{document}
