More base for this catastrophe

--- a/conclusions/c_conclusions.tex
+++ b/conclusions/c_conclusions.tex
@@ -1,5 +1,8 @@
 
  \chapter{Conclusions}
+ Koko hässäkän kiteytys mahdollisimman ytimekkäästi.
+
+ 
  % HUOM nämä mpohj kommentteja
 
  % kerrottiin softa-startupeista yleisellä tasolla
