--- a/evaluation/c_evaluation.tex
+++ b/evaluation/c_evaluation.tex
@@ -1,4 +1,14 @@
 
-\chapter{Results}
+\chapter{Evaluation}
 
-Temp
+\section{Technical Effectiviness of the Implementation}
+Kuinka toimii teknisesti, toimiiko? Mitä huonoja puolia jäi?
+
+\section{User Experience on the Implementation}
+Validointi haastattelujen kautta, mitä mieltä offlinen toimivuudesta
+
+(Tänne myös käyttäjien käsityksiä offline-modesta?)
+
+\section{Design Guidelines}
+Mitä suosituksia voisi Päikky-sekoilusta muodostaa jälkipolville?
+
