--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -11,7 +11,7 @@ e
 \vspace{6.8cm}
  
 \noindent{\bf\large \textsf{Miro Nieminen}}\\
-{\bf\large \textsf{}}\\
+{\bf\large \textsf{Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
@@ -20,7 +20,7 @@ e
   
 \begin{minipage}[c]{6.8cm}
 \begin{spacing}{1.0}
-\textsf{Examiners: Tarkastaja 1}\\
+\textsf{Examiners: Tommi Mikkonen}\\
 \textsf{Examiners and topic approved in}\\ 
 \textsf{the Information Technology}\\
 \textsf{Department Council meeting on}\\
@@ -37,7 +37,7 @@ e
 \begin{spacing}{1.0}
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
-{\bf \textsf{Miro Nieminen: <otsikko>}}\\
+{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
 \textsf{Diplomityö, xx sivua}\\
 \textsf{Xxxxxkuu 2015}\\
 \textsf{Pääaine: }\\
@@ -56,8 +56,8 @@ Tekstiä
 \begin{spacing}{1.0}
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
-{\bf \textsf{Miro Nieminen: <otsikko>}}\\
-\textsf{Master of Science Thesis, 61 pages}\\
+{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
+\textsf{Master of Science Thesis, xx pages}\\
 \textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
 \textsf{Examiner: }\\
@@ -85,7 +85,7 @@ Tektsiä
 \chapter*{PREFACE}
 \noindent 
 
-Tässä on tapana vaan kiitellä kaikkia. Tämä nimenomainen templaattiin laitettu teksti on Mikko Pohjan mukaan "ihan tyhmä".
+Your advertisement could be here.
  
 \newpage
 \tableofcontents
