--- a/implementation/c_implementation.tex
+++ b/implementation/c_implementation.tex
@@ -1,4 +1,35 @@
 
 \chapter{Implementation}
+<Tähän yleisinfo>
 
-Temp
+%% --------------
+
+\section{Basic Principles of the Päikky's Offline-mode}
+\subsection{The goal of the Offline-mode}
+Mitä Offline-modella pyrittiin saavuttamaan
+
+\subsection{Limited Feature Set}
+Offline-moden rajoitettu featuresetti - mitä ja miksi
+
+
+%% --------------
+\section{Technical Details}
+\subsection{Application Cache}
+
+
+\subsection{Local Storage}
+Tekstivä
+
+
+\subsection{HTML Cache Headers}
+Apacheconffauksista, otsikko saattaa vaatia työtä
+
+
+\subsection{Promise-based Presence Marking queue}
+Kuinka koodin tasolla on toteutettu tehtävien merkkauksien jonosysteemi ja sen purkaminen
+
+
+%% --------------
+\section{Known Limitations of the Offline-mode}
+
+
