--- a/methods/c_methods.tex
+++ b/methods/c_methods.tex
@@ -1,9 +1,17 @@
 
 \chapter{Methods}
+<Bla bla>
 
-% Ehkä tätä voisi kutsua design research nimikkeellä (Googlaa). 
-% Real life case study (tai field study)
-% datan keräysmetodina käyttäjä/asiakashaastattelut  (muuta?, kehitysdokumentit?)  
+\section{Design Research}
 
 
+\section{Real Life Field Study}
+\subsection{Päikky-system before and after Offline-mode}
 % Implementaatiosta sen verran että tutkimusmetodina on implementoida teknologiaa ja tutkia kuinka se soveltuu arkipäivän käyttöön. Voisi myös miettiä lähestymistä että sulla on ollut kaksi eri tilannetta 1. softa ilman offline"palikkaa/featurea" ja 2. offline palikan kanssa. Tutkit että kuinka offlinepalikka vaikutti sovelluksen käyttökokemukseen.
+
+\subsection{Validating Offline-mode User Experience with User Interviews}
+% datan keräysmetodina käyttäjä/asiakashaastattelut (muuta?, kehitysdokumentit?)
+
+  
+
+
