--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -13,33 +13,32 @@
 % kuvatekstien kirjasinkoko ja asettelu
 \usepackage[small]{caption}
 
-%omia käskyjä voi lisätä tähän väliin, esim. \newcommand{\angs}{\textsl{\AA}}
+% omia käskyjä voi lisätä tähän väliin, esim. \newcommand{\angs}{\textsl{\AA}}
 
 \pagenumbering{Roman}
 
-% alkuvalmistelut loppuu
- 
-\begin{document}
+% // alkuvalmistelut loppuu
 
-\input{general/c_pretext}
 
 % Tästä alkaa varsinainen teksti
+\begin{document}
+\input{general/c_pretext}
 \pagenumbering{arabic}
  
 
- %% ---------------------------------------
- %% Introduction
+%% ---------------------------------------
+%% Introduction
 \input{introduction/c_intro}
  
 
 %% ---------------------------------------
 %% Related Research
- \input{related_research/c_related_research}
+\input{related_research/c_related_research}
 
 
 %% ---------------------------------------
 %% Methods 
- \input{methods/c_methods}
+\input{methods/c_methods}
 
  
 %% ---------------------------------------
