--- a/introduction/c_intro.tex
+++ b/introduction/c_intro.tex
@@ -2,12 +2,45 @@
 
 
 
-%% "Tämä dippa koskee tätä..."
 
-%% 
+% ### yleistä taustaa (esim. on enemmän ja enemmän verkon kautta käytettäviä mobiilipalveluita. tämä vaatii sen että verkko toimii, ihmisten arki ja sen vuorovaikutustilanteen ovat nykyään hyvin verkkovälitteisiä)
 
-% -yleistä taustaa (esim. on enemmän ja enemmän verkon kautta käytettäviä mobiilipalveluita. tämä vaatii sen että verkko toimii, ihmisten arki ja sen vuorovaikutustilanteen ovat nykyään hyvin verkkovälitteisiä)
 
-% - ongelmakentän kuvaus, mikä on tutkimusta vaativa ongelma (kentän katkeaminen ja minkälaisia ongemia se aiheuttaa) ja se ajankohtaisuus ja yleisyys. Ongelma on että ei tiedetä kovin hyvin että kuinka kentän katkeamisen vaikutukset pitäisi ottaa sovelluskehityksessä huomioon niin että käyttäjän tavoitteet sovelluksen käytölle täyttyvät kentän katkeamisesta huolimatta. 
+% Maailma digitalisoituu ympärillämme, yhä useampi työtehtävistä ja vapaa-ajan aktiviteeteista liittyy jotenkin digitaalisiin palveluihin ja laitteisiin. Harva näistä toimii täysin ilman Internetin tukea
+The world is digitalizing around us on a always more quicker pace. More and more of our work tasks and our past time activities are somehow affiliated to digital devices and services. Most of these things are useless without connectivity to broader context, usually the Internet. 
 
+% Mobile usage has surpassed desktop usage in <lähde>, on jo iso joukko käyttäjiä joiden ainoa tie Internetiin on heidän mobiililaitteensa <lähde>. Joku viittaus "seuraavaan miljardiin netin käyttäjään?""
+Age of the desktop hegemony is already over. <tilastoprosentti ja viite tähän> use mobile devices as their primary method of accessing the Internet. Unlike as in desktop devices, which usually are operated from static location aided by cable access to the Internet, mobile devices often travel with their owners where ever they might go. That creates major challenges for connectivity, which is nowadays essentials for device proper usage. 
+
+% Mobiilinetti-coverage ei optimaalinen -> verkkokatkoksia tulee, laadullisia ja kokonaan yhteyden katoamisia. Näiltä ei voida välttyä.
+When mobile device is not in the coverage area of an Wireless Local Area Network, device relies on mobile broadband connection. Mobile broadband coverage varies within different locations. Basically when moving away from the nearest base station the reception of signal weakens. Mobile device user experiences this as an increased latency times, lower data transferring speeds, or even as a total blackout of the broadband service. When moving away from highly populated areas this is unevitable, since not all locations are to be covered properly keeping cost efficiency in mind <source?>.
+
+% Tämä dippa tarkastelee tätä perusyhtälöä ohjelmistonkehittäjän kannalta - kuinka ja millä tasolla verkon laadun huonontumiseen/kokonaiseen katkeamiseen tulisi varautua? Onko mahdollista abstarhoida verkon laadun vaihteleminen käyttäjältä piiloon kokonaan, ja hallita sen tuomat ongelmat applikaation sisäisesti? Millaisia resursseja tällainen vaatii ohjelmiston kehitysvaiheessa? Entä mahdollinen lisäkuorma laitteille?
+The thesis you are about to read studies this dilemma. People are more and more reliant digital services and their device of choose is mobile devices on an increasing scale. From software development point of view looking, how to deliver seamless user experience, even when the connectivity is bad or nonexistent? How much resources can this reserve on the development phase? Could we <abstrahoida> the connectivity quality completely away and handle the issues with connection internally on the application level, invisible to the user?
+
+
+%% Tommi-input: 
+% "rajaus pitää selittää johdannossa,tiivistössä ja abstraktissa"
+% -mihin liittyy, konteksti
+% -ongelma, mitä tehdään kun yhteys katoaa
+% -ratkaisu, “tässä diplomityössä tehdään”
+% -arviointi, “miten hyvä tästä tuli”
+
+% HUOM RAJAUS KOSKEMAAN VAIN FRONTEND PÄÄN TEKNIIKOITA
+
+% ### - ongelmakentän kuvaus, mikä on tutkimusta vaativa ongelma (kentän katkeaminen ja minkälaisia ongemia se aiheuttaa) ja se ajankohtaisuus ja yleisyys. Ongelma on että ei tiedetä kovin hyvin että kuinka kentän katkeamisen vaikutukset pitäisi ottaa sovelluskehityksessä huomioon niin että käyttäjän tavoitteet sovelluksen käytölle täyttyvät kentän katkeamisesta huolimatta. 
+
+
+
+
+
+
+% Tässä dipassa ongelmaa lähdetään selvittämään case studyllä liittyen Päikky-järjestelmään. <Pieni pohjustus järjestelmästä>
 % - kerro miten lähdet tässä tutkimuksessa ratkaisemaan ongelmaa. Case tutkimus päiväkotisoftalle. Tehtiin päiväkotisofta, mutta huomattiin että verkonkatkeilu muodostaa merkittävän ongelman (kerro myös konkreettisesti mitä ongelmia katkeilu synnytti). Sitä ongelmaa lähdettiin sitten ratkaisemaan. Softan implementointi ja real life kenttäkoe implementoinnin vaikutuksista 
+On this thesis Päikky-system
+
+% <Päikyn ei-offline-versiossa ilmenneet ongelmat>
+
+% <Lyhyesti offline-moden implementoinnista ja tosimaailman kenttäkokeesta>
+
+% Offline-moden vaikutukset käytössä <haastatteluista rojua tähän>
