First version for SV to check

--- a/evaluation/c_evaluation.tex
+++ b/evaluation/c_evaluation.tex
@@ -4,11 +4,30 @@
 \section{Technical Effectiviness of the Implementation}
 Kuinka toimii teknisesti, toimiiko? Mitä huonoja puolia jäi?
 
+
+
+%% -------------------------------
 \section{User Experience on the Implementation}
-Validointi haastattelujen kautta, mitä mieltä offlinen toimivuudesta
+Tätä mitattiin käyttäjähaastatteluilla, blabla, katso kappale Methods
+% Validointi haastattelujen kautta, mitä mieltä offlinen toimivuudesta
 
-(Tänne myös käyttäjien käsityksiä offline-modesta?)
+\subsection{User interview results}
+Selitystä haastiksien tuloksista. Saisko jopa jotain hassunhauskaa graafia aikaiseksi?
 
+
+
+\subsection{Users' Understanding on Offline-mode}
+- missä tieto säilössä? asiakaspalvelin-mallin ymmärtämättömyys
+
+
+
+
+%% -------------------------------
 \section{Design Guidelines}
 Mitä suosituksia voisi Päikky-sekoilusta muodostaa jälkipolville?
 
+\subsection{Implement Offline features in an early phase}
+Jos on ajatus siitä, että voisi olla pienikin tarve offline-tuelle, tee se samantien (budjetin/ajan sallimissa rajoissa)
+
+\subsection{Naming the Offline concept on the UI-level}
+Offline-moodi ei selkeä "normikäyttäjälle", nimeämistä tulee harkita
