--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -11,7 +11,7 @@ e
 \vspace{6.8cm}
  
 \noindent{\bf\large \textsf{Miro Nieminen}}\\
-{\bf\large \textsf{Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
+{\bf\large \textsf{Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
@@ -37,7 +37,7 @@ e
 \begin{spacing}{1.0}
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
-{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
+{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Diplomityö, xx sivua}\\
 \textsf{Xxxxxkuu 2015}\\
 \textsf{Pääaine: }\\
@@ -56,7 +56,7 @@ Tekstiä
 \begin{spacing}{1.0}
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
-{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Mobile Web Applications}}\\
+{\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis, xx pages}\\
 \textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
