--- a/methods/c_methods.tex
+++ b/methods/c_methods.tex
@@ -1,15 +1,25 @@
 
 \chapter{Methods}
-<Bla bla>
+Tämä kappale on itselleni kaikista hämärin, että mitä täällä pitäisi olla
 
 \section{Design Research}
+Erityisesti tämä osio
+
+\section{Case: Päikky-system and Offline-mode}
+Tänne jotain tavaraa Päikky-toimitusjohtajan haastattelusta (jota ei siis vielä ole tehty?). Ehkä jos jotain löytyy kommunikaatiosta/kehitysdokumenteista niin se myös?
+
+Kannattaisiko tänne kaivaa versionhallinnasta dataa offlinemoodista, tyyliin millä aikavälillä se kehitettiin, paljonko arvioitu rivien määrä, etc?
+
+\subsection{Before and after Offline-mode}
+Softan käytöstä ennen offline-modea
+
+Softan käytöstä offline-moden jälkeen
 
 
-\section{Real Life Field Study}
-\subsection{Päikky-system before and after Offline-mode}
 % Implementaatiosta sen verran että tutkimusmetodina on implementoida teknologiaa ja tutkia kuinka se soveltuu arkipäivän käyttöön. Voisi myös miettiä lähestymistä että sulla on ollut kaksi eri tilannetta 1. softa ilman offline"palikkaa/featurea" ja 2. offline palikan kanssa. Tutkit että kuinka offlinepalikka vaikutti sovelluksen käyttökokemukseen.
 
 \subsection{Validating Offline-mode User Experience with User Interviews}
+Avattu, keneltä on kysytty (päiväkodin tädit) mitä (Päikky-järjestelmän käyttöä ja offline-moodin käsittämisestä juttua) ja miksi (pyritään ymmärtämään onko offline-mode vastaus todelliseen käyttäjien ongelmaan). Datan keräysmetodina puolistrukturoitu käyttäjähaastattelu.
 % datan keräysmetodina käyttäjä/asiakashaastattelut (muuta?, kehitysdokumentit?)
 
   
