--- a/related_research/c_related_research.tex
+++ b/related_research/c_related_research.tex
@@ -3,20 +3,30 @@
 
 <Yleiskuvausta tutkimuksesta>
 
+(Mieleni tekisi nimetä tämä kappale "Backgroundiksi", olisikohan parempi?)
+
 % Yleisesti verkoista, tekniikasta, toimivuusta, ratkaisuja offline moodiin
 
+\section{Single-Page Applications}
+SPA's in general
 
-\section{Basics of Mobile Device Data communication}
-% - kännyverkon toiminnasta jotain?
-% - kännyverkon toimivuuden vaihtelun yleisyydestä? 
+REST API:sta jotain (Päikky cachettaa nimenomaan tämäntyyppisiä requesteja)
 
-\section{Existing Solutions for the Offline Problem}
-% - minkälaisia offline ratkaisuja on olemassa web/känny-puolella (miten google/microsoft yms. ovat lähestyneet ongelmaa
+"Frontend gets fatter and fatter" -> Päikyn tilakone myös frontendissä nyt
 
-\section{Computer Supported Collaborative Work}
-% Erityisesti liittyen sun caseen (reaaliaikainen informaationjako, päiväkoympäristö?)
+
+\section{Problems in Internet Connectivity}
+ - eri tavat yhdistää internetiin (piuhayhteys, wlan, mobiilidata)
+ - kännyverkon toiminnasta jotain?
+ - kännyverkon toimivuuden vaihtelun yleisyydestä? 
+
+ \section{Computer Supported Collaborative Work}
+ "Reaaliaikaisesta informaationjaosta päiväkotiympäristössä"
 % - verkkovälitteinen vuorovaikutus
 % - hakusanalla computer supported collaborative work (CSCW) löytyy kamaa 
+
+\section{Existing Solutions for the Offline Problem}
+Minkälaisia offline ratkaisuja on olemassa web/känny-puolella (miten google/microsoft yms. ovat lähestyneet ongelmaa)?
 
 
 \section{Research Gap}
