--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -52,7 +52,7 @@
 
 %% ---------------------------------------
 %% Discussion
-\input{discussion/c_discussion}
+% \input{discussion/c_discussion}
 
 %% ---------------------------------------
 %% Conclusions
