--- a/introduction/c_intro.tex
+++ b/introduction/c_intro.tex
@@ -4,19 +4,65 @@
 
 
 % ### yleistä taustaa (esim. on enemmän ja enemmän verkon kautta käytettäviä mobiilipalveluita. tämä vaatii sen että verkko toimii, ihmisten arki ja sen vuorovaikutustilanteen ovat nykyään hyvin verkkovälitteisiä)
-
-
 % Maailma digitalisoituu ympärillämme, yhä useampi työtehtävistä ja vapaa-ajan aktiviteeteista liittyy jotenkin digitaalisiin palveluihin ja laitteisiin. Harva näistä toimii täysin ilman Internetin tukea
-The world is digitalizing around us on a always more quicker pace. More and more of our work tasks and our past time activities are somehow affiliated to digital devices and services. Most of these things are useless without connectivity to broader context, usually the Internet. 
+The world is digitalizing around us on a always more quicker pace. More and more of our work tasks and our past time activities are somehow affiliated to digital devices and services. Most of these things are often useless without connectivity to a broader context, usually the Internet. 
 
 % Mobile usage has surpassed desktop usage in <lähde>, on jo iso joukko käyttäjiä joiden ainoa tie Internetiin on heidän mobiililaitteensa <lähde>. Joku viittaus "seuraavaan miljardiin netin käyttäjään?""
-Age of the desktop hegemony is already over. <tilastoprosentti ja viite tähän> use mobile devices as their primary method of accessing the Internet. Unlike as in desktop devices, which usually are operated from static location aided by cable access to the Internet, mobile devices often travel with their owners where ever they might go. That creates major challenges for connectivity, which is nowadays essentials for device proper usage. 
+Age of the desktop hegemony is already over. XX percentage of people use mobile devices as their primary method of accessing the Internet. <viite> Unlike as in desktop devices, which usually are operated from static location aided by cable access to the Internet, mobile devices often travel with their owners where ever they might go. That creates challenges for connectivity, which is nowadays essentials for device proper usage. 
 
 % Mobiilinetti-coverage ei optimaalinen -> verkkokatkoksia tulee, laadullisia ja kokonaan yhteyden katoamisia. Näiltä ei voida välttyä.
-When mobile device is not in the coverage area of an Wireless Local Area Network, device relies on mobile broadband connection. Mobile broadband coverage varies within different locations. Basically when moving away from the nearest base station the reception of signal weakens. Mobile device user experiences this as an increased latency times, lower data transferring speeds, or even as a total blackout of the broadband service. When moving away from highly populated areas this is unevitable, since not all locations are to be covered properly keeping cost efficiency in mind <source?>.
+When mobile device is not in the coverage area of an Wireless Local Area Network, device relies on mobile broadband connection. Mobile broadband coverage varies within different locations. When moving away from the nearest base station the reception of signal weakens. Mobile device user experiences this as an increased latency times, lower data transferring speeds, or even as a total blackout of the broadband service. When moving away from highly populated areas this is unevitable, since not all locations are to be covered properly while keeping cost efficiency on a sane level <source?>, especially in countries with large acreage but low population, like Finland. However digitalization of services is even more important on a places like this, since supplying physical services to areas with low population density is expensive. 
+
+People are more and more reliant digital services and their device of choose is mobile devices on an increasing scale. But how to use services and devices dependent on the Internet with coincidental connection? The thesis you are about to read researches this problem. 
 
 % Tämä dippa tarkastelee tätä perusyhtälöä ohjelmistonkehittäjän kannalta - kuinka ja millä tasolla verkon laadun huonontumiseen/kokonaiseen katkeamiseen tulisi varautua? Onko mahdollista abstarhoida verkon laadun vaihteleminen käyttäjältä piiloon kokonaan, ja hallita sen tuomat ongelmat applikaation sisäisesti? Millaisia resursseja tällainen vaatii ohjelmiston kehitysvaiheessa? Entä mahdollinen lisäkuorma laitteille?
-The thesis you are about to read studies this dilemma. People are more and more reliant digital services and their device of choose is mobile devices on an increasing scale. From software development point of view looking, how to deliver seamless user experience, even when the connectivity is bad or nonexistent? How much resources can this reserve on the development phase? Could we <abstrahoida> the connectivity quality completely away and handle the issues with connection internally on the application level, invisible to the user?
+
+
+
+\section{Research Objectives}
+The objective of this research is to find useful and working fallback mechanisms for connectivity loss in Single-Page Web Applications, in both from the user experience perspective and from the developer's viewpoint. The state where the application loses the connectivity to the Internet is referred on this thesis as an "offline-mode". This thesis tries to find efficient methods of allowing the user to continue his/hers tasks when the connection is lost and the application enters the offline-mode.
+
+From software development point of view looking, how to deliver seamless user experience, even when the connectivity is bad or nonexistent? How much resources can this reserve on the development phase? Is it possible to abstract the connection quality completely away and handle the issues with connection internally on the application level, invisible to the user?
+
+From the user experience perspective, how to notify the user about the loss of Internet connection? Does the user has to be notified at all? If the user is notified, what is exactly the message that needs to be told? 
+
+
+This thesis studies one real-life case of implementing offline supported functionality to already existing system created for supporting daycare personnel and the parents of daycare children, the Päikky-system.
+
+
+\section{Päikky-system}
+Application under our case analysis is Päikky, a solution for daycare personnel & daycare children’s parents for planning the needed daycare and passage control of the children on the daycare. 
+
+Päikky consists of four parts:
+\begin{enumerate}
+	\item \textit{Kindergarten UI}, single-page application used for logging children in/out to kindergarten
+	\item \textit{Family UI}, single-page application used by parents when planning children daycare time
+	\item \textit{Manager UI}, single-page application used by kindergarten management 
+	\item \textit{Backend}, Grails-powered REST-API
+\end{enumerate}
+\noindent In this thesis we are focusing on the \textit{Kindergarten UI}, which is the tool used on daily basis by the kindergarten nurses for tracking the attendance. From the Kindergarten UI nurses can also see elaborate information about the children, including allergies and persons who are allowed to pick them up, have parents allowed the children to be photographed. Updating this information is also possible. They can also monitor the overall presence of persons in the kindergarten, including both children and other nurses.
+
+Key activity for nurses is to log in child when they arrive at the kindergarten and log them out when child leaves. To do this conveniently nurses are equipped with Android smart phones. This has to be done in order to replicate the presence status from the real world to the Päikky system. Based on the plans done by parents on the Family UI, nurses can see how many and who of the children they are expecting to appear for each day. This activity is repeated tens of times per day. Since monitoring attendance and creating bills for provided daycare is based on the presence data generated by logging the children in and out, it is crucial that this activity can be achieved successfully under any kind of condition.
+
+
+
+
+\section{Research Question}
+This thesis answers to the following question: "How to prepare for Internet connection shortages on a Single-Page web application?"
+% TODO: block quote for the question
+
+\section{Scope}
+The whole Internet is build on top of the client-server -paradigm [Berson]. In this thesis we focus on the client end of this paradigm and research ways of dealing the connectivity problem in there while delimiting the server out of this thesis' context. 
+
+On the client we will focus on how to deal with the issue on the web application level inside the browser environment, ignoring the possible solutions that could be done on the device platform tier. Therefore results of this thesis will apply browsers in desktop computers, tablet devices and mobile phones.
+
+
+
+
+
+\section{Structure of the thesis}
+In here well be described contents of each chapter, because that's how it has always been done.
+
 
 
 %% Tommi-input: 
@@ -26,7 +72,11 @@ The thesis you are about to read studies this dilemma. People are more and more 
 % -ratkaisu, “tässä diplomityössä tehdään”
 % -arviointi, “miten hyvä tästä tuli”
 
+
 % HUOM RAJAUS KOSKEMAAN VAIN FRONTEND PÄÄN TEKNIIKOITA
+% TUTKIMUSKYSYMYS?!?!?!
+
+
 
 % ### - ongelmakentän kuvaus, mikä on tutkimusta vaativa ongelma (kentän katkeaminen ja minkälaisia ongemia se aiheuttaa) ja se ajankohtaisuus ja yleisyys. Ongelma on että ei tiedetä kovin hyvin että kuinka kentän katkeamisen vaikutukset pitäisi ottaa sovelluskehityksessä huomioon niin että käyttäjän tavoitteet sovelluksen käytölle täyttyvät kentän katkeamisesta huolimatta. 
 
@@ -37,10 +87,13 @@ The thesis you are about to read studies this dilemma. People are more and more 
 
 % Tässä dipassa ongelmaa lähdetään selvittämään case studyllä liittyen Päikky-järjestelmään. <Pieni pohjustus järjestelmästä>
 % - kerro miten lähdet tässä tutkimuksessa ratkaisemaan ongelmaa. Case tutkimus päiväkotisoftalle. Tehtiin päiväkotisofta, mutta huomattiin että verkonkatkeilu muodostaa merkittävän ongelman (kerro myös konkreettisesti mitä ongelmia katkeilu synnytti). Sitä ongelmaa lähdettiin sitten ratkaisemaan. Softan implementointi ja real life kenttäkoe implementoinnin vaikutuksista 
-On this thesis Päikky-system
+
 
 % <Päikyn ei-offline-versiossa ilmenneet ongelmat>
 
 % <Lyhyesti offline-moden implementoinnista ja tosimaailman kenttäkokeesta>
 
 % Offline-moden vaikutukset käytössä <haastatteluista rojua tähän>
+
+% META:
+% pitäisikö intron olla oma kokonaisuus? tarvitsisiko myöhemmissä kappaleissa vielä erikseen avata päikky-järjestelmää, vai voiko introssa käydä perinpohjaisesti läpi päikyn ja sitte that's it? Kävi myös mielessä pitäisikö ennen releated researchia olla yksi kappale nimenomaan Päikky-järjestelmän käytöstä
