Fixes to the structure based on critic by SV

--- a/conclusions/c_conclusions.tex
+++ b/conclusions/c_conclusions.tex
@@ -1,6 +1,8 @@
 
- \chapter{Conclusions}
+ \chapter{Discussion & Conclusions}
  Koko hässäkän kiteytys mahdollisimman ytimekkäästi.
+
+ <spekulaatiota siitä, pitäisikö opettaa käyttäjille asiakas-palvelin-systeemin periaatteet>
 
  
  % HUOM nämä mpohj kommentteja
