--- a/evaluation/c_evaluation.tex
+++ b/evaluation/c_evaluation.tex
@@ -26,8 +26,12 @@ Selitystä haastiksien tuloksista. Saisko jopa jotain hassunhauskaa graafia aika
 \section{Design Guidelines}
 Mitä suosituksia voisi Päikky-sekoilusta muodostaa jälkipolville?
 
-\subsection{Implement Offline features in an early phase}
+\subsection{Recognize the Required Feature set for Offline Support}
+Kaikkea ei välttämättä tarvitse tukea Offline-moodissa, resurssien säästämiseksi on mahdollista etsiä avainaktiviteetit ja mahdollistaa vain niiden käyttö
+
+
+\subsection{Implement Offline Features in an Early πhase}
 Jos on ajatus siitä, että voisi olla pienikin tarve offline-tuelle, tee se samantien (budjetin/ajan sallimissa rajoissa)
 
-\subsection{Naming the Offline concept on the UI-level}
+\subsection{Naming the Offline Concept on the UI-level}
 Offline-moodi ei selkeä "normikäyttäjälle", nimeämistä tulee harkita
