--- a/implementation/c_implementation.tex
+++ b/implementation/c_implementation.tex
@@ -13,7 +13,7 @@ Mitä Offline-modella pyrittiin saavuttamaan
 \subsection{Limited Feature Set}
 Offline-moden rajoitettu featuresetti - mitä ja miksi
 
-\subsection{Actions when entering and leaving offline-mode}
+\subsection{Actions when Entering and Leaving Offline mode}
 Yleisellä tasolla mitä sovellus tekee kun mennään offline-modeen, ja mitä kun tullaan sieltä pois
 
 %% --------------
@@ -43,7 +43,7 @@ Kuinka koodin tasolla on toteutettu tehtävien merkkauksien jonosysteemi ja sen 
 
 
 %% --------------
-\section{Known Limitations of the Offline-mode}
+\section{Known Limitations of the Offline mode}
 Esimerkiksi konfliktitilanteita nykyisessä ratkaisussa ei huomioida/niihin ei varauduta mitenkään (esimerkiksi jos kaksi käyttäjää yhtäaikaa editoi offlinessa juttuja ja laitteet menevät onlineen -> mitä tapahtuu on mysteeri. Tätä on paikattu käyttäjäkoulutuksella, että eivät aja järjestelmää tällaisiin tilanteisiin)
 
 
