Move chapters from individual folders to "chapters" folder

--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -28,35 +28,35 @@
 
 %% ---------------------------------------
 %% Introduction
-\input{introduction/c_intro}
+\input{chapters/c_intro}
  
 
 %% ---------------------------------------
 %% Related Research
-\input{related_research/c_related_research}
+\input{chapters/c_related_research}
 
 
 %% ---------------------------------------
 %% Methods 
-\input{methods/c_methods}
+\input{chapters/c_methods}
 
  
 %% ---------------------------------------
 %% Implementation
-\input{implementation/c_implementation}
+\input{chapters/c_implementation}
  
 
 %% ---------------------------------------
 %% Results
-\input{evaluation/c_evaluation}
+\input{chapters/c_evaluation}
 
 %% ---------------------------------------
 %% Discussion
-% \input{discussion/c_discussion}
+% \input{chapters/c_discussion}
 
 %% ---------------------------------------
 %% Conclusions
-\input{conclusions/c_conclusions}
+\input{chapters/c_conclusions}
 
 %% ---------------------------------------
 %% References
