--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -50,20 +50,21 @@
 %% Results
 \input{chapters/c_evaluation}
 
-%% ---------------------------------------
-%% Discussion
-% \input{chapters/c_discussion}
 
 %% ---------------------------------------
 %% Conclusions
 \input{chapters/c_conclusions}
 
+
 %% ---------------------------------------
 %% References
 \input{general/c_references}
  
- 
-%\chapter{Liitteitä}
 
+%% ---------------------------------------
+%% Appendix
+%% <todo>
+%\appendix
+%\renewcommand{\chaptername}{Liite}
 
 \end{document}
