--- a/books.bib
+++ b/books.bib
@@ -1,158 +1,115 @@
-@ONLINE{ASQglossary,
-author = {American society for quality},
-title = {Quality glossary},
-howpublished = {[WWW]. [accessed at 23].11.2013. Available at: http://asq.org/glossary/q.html. }
+
+@article{leblon_building_????,
+  title = {Building advanced, offline web  applications with {HTML} 5},
+  url = {http://lib.ugent.be/fulltxt/RUG01/001/418/513/RUG01-001418513_2010_0001_AC.pdf},
+  author = {Leblon, Robin}
 }
 
-@book{jones2011economics,
-  title={The Economics of Software Quality},
-  author={Jones, C. and Bonsignour, O. and Subramanyam, J.},
-  isbn={9780132582209},
-  lccn={2011014858},
-  url={http://books.google.fi/books?id=\_t5l5Cn0NBEC},
-  year={2011},
-  publisher={Addison-Wesley}
+@misc{crockford_application/json_2006,
+  title = {The application/json Media Type for {JavaScript} Object Notation ({JSON})},
+  copyright = {The Internet Society 2006},
+  url = {http://www.ietf.org/rfc/rfc4627.txt},
+  urldate = {2014-10-28},
+  author = {Crockford, Douglas},
+  month = jul,
+  year = {2006}
 }
 
-@ONLINE{atlassianAgileReview,
-author = {Wojciech Seliga},
-title = {Code Review in Agile Teams – part II},
-howpublished = {[WWW]. [accessed at 28.12.2013]. Available at: https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/. }
+@phdthesis{fielding_architectural_2000,
+  title = {Architectural Styles and the Design of Network-based Software Architectures},
+  url = {http://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm},
+  abstract = {The World Wide Web has succeeded in large part because its software architecture has been designed to meet the needs of an Internet-scale distributed hypermedia system. The Web has been iteratively developed over the past ten years through a series of modifications to the standards that define its architecture. In order to identify those aspects of the Web that needed improvement and avoid undesirable modifications, a model for the modern Web architecture was needed to guide its design, definition, and deployment.
+
+Software architecture research investigates methods for determining how best to partition a system, how components identify and communicate with each other, how information is communicated, how elements of a system can evolve independently, and how all of the above can be described using formal and informal notations. My work is motivated by the desire to understand and evaluate the architectural design of network-based application software through principled use of architectural constraints, thereby obtaining the functional, performance, and social properties desired of an architecture. An architectural style is a named, coordinated set of architectural constraints.
+
+This dissertation defines a framework for understanding software architecture via architectural styles and demonstrates how styles can be used to guide the architectural design of network-based application software. A survey of architectural styles for network-based applications is used to classify styles according to the architectural properties they induce on an architecture for distributed hypermedia. I then introduce the Representational State Transfer ({REST}) architectural style and describe how {REST} has been used to guide the design and development of the architecture for the modern Web.
+
+{REST} emphasizes scalability of component interactions, generality of interfaces, independent deployment of components, and intermediary components to reduce interaction latency, enforce security, and encapsulate legacy systems. I describe the software engineering principles guiding {REST} and the interaction constraints chosen to retain those principles, contrasting them to the constraints of other architectural styles. Finally, I describe the lessons learned from applying {REST} to the design of the Hypertext Transfer Protocol and Uniform Resource Identifier standards, and from their subsequent deployment in Web client and server software.},
+  urldate = {2014-10-28},
+  school = {{UNIVERSITY} {OF} {CALIFORNIA}, {IRVINE}},
+  author = {Fielding, Roy},
+  year = {2000}
 }
 
-@misc{beck2001agile,
-  added-at = {2007-12-30T11:39:05.000+0100},
-  author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
-  biburl = {http://www.bibsonomy.org/bibtex/28954248a545d88dd2c0e688d1c7e2f9d/juve},
-  booktitle = {Manifesto for Agile Software Development},
-  description = {Manifesto for Agile Software Development},
-  interhash = {098cc7e185f10c3da390459a01e0d535},
-  intrahash = {8954248a545d88dd2c0e688d1c7e2f9d},
-  keywords = {imported},
-  timestamp = {2007-12-30T11:39:05.000+0100},
-  title = {Manifesto for Agile Software Development},
-  howpublished = {[WWW]. [accessed at .1].2014. Available at: http://www.agilemanifesto.org/ } ,
-  year = 2001
+@book{berson_client-server_1992,
+  series = {J. Ranade series on computer communications},
+  title = {Client-server architecture},
+  isbn = {9780070050761},
+  url = {http://books.google.fi/books?id=DaQZAQAAIAAJ},
+  publisher = {{McGraw}-Hill},
+  author = {Berson, A.},
+  year = {1992},
+  lccn = {lc92006831}
 }
 
-@book{beck2003test,
-  title={Test-driven development: by example},
-  author={Beck, Kent},
-  year={2003},
-  publisher={Addison-Wesley Professional}
+@book{flanagan_javascript:_2011,
+  title = {{JavaScript}: The Definitive Guide, 6th Edition},
+  isbn = {978-0-596-80552-4},
+  url = {http://it-ebooks.info/book/416/},
+  abstract = {Book Description
+{JavaScript}: The Definitive Guide has been the bible for {JavaScript} programmers-a programmer's guide and comprehensive reference to the core language and to the client-side {JavaScript} {APIs} defined by web browsers.
+
+The 6th edition covers {HTML}5 and {ECMAScript} 5. Many chapters have been completely rewritten to bring them in line with today's best web development practices. New chapters in this edition document {jQuery} and server side {JavaScript}. It's recommended for experienced programmers who want to learn the programming language of the Web, and for current {JavaScript} programmers who want to master it.},
+  publisher = {O'Reilly Media},
+  author = {Flanagan, David},
+  year = {2011}
 }
 
-@book{martin2008clean,
-  title={Clean Code: A Handbook of Agile Software Craftsmanship},
-  author={Martin, R.C.},
-  isbn={9780136083252},
-  url={http://books.google.fi/books?id=\_i6bDeoCQzsC},
-  year={2008},
-  publisher={Pearson Education}
+@article{graham_web_2005,
+  title = {Web 2.0},
+  url = {http://www.paulgraham.com/web20.html},
+  abstract = {Does "Web 2.0" mean anything? Till recently I thought it didn't, but the truth turns out to be more complicated. Originally, yes, it was meaningless. Now it seems to have acquired a meaning. And yet those who dislike the term are probably right, because if it means what I think it does, we don't need it.
+
+I first heard the phrase "Web 2.0" in the name of the Web 2.0 conference in 2004. At the time it was supposed to mean using "the web as a platform," which I took to refer to web-based applications. [1]
+
+So I was surprised at a conference this summer when Tim O'Reilly led a session intended to figure out a definition of "Web 2.0." Didn't it already mean using the web as a platform? And if it didn't already mean something, why did we need the phrase at all?},
+  urldate = {2014-10-28},
+  author = {Graham, Paul},
+  month = nov,
+  year = {2005}
 }
 
-@ONLINE{ISOBlog,
-author = {Roelof Reitsma},
-title = {Software has a new quality standard: {ISO} 25010},
-howpublished = {[WWW]. [accessed at 27.11.2013]. Available at: http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html }
+@inproceedings{jazayeri_trends_????,
+  title = {Some Trends in Web Application Development},
+  url = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621},
+  abstract = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=\&arnumber=4221621\&url=http\%3A\%2F\%2Fieeexplore.ieee.org\%2Fxpls\%2Fabs\_all.jsp\%3Farnumber\%3D4221621},
+  author = {Jazayeri, M}
 }
 
-@book{ries2011lean,
-  title={The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses},
-  author={Ries, E.},
-  isbn={9780307887894},
-  lccn={2011012100},
-  series={The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses},
-  url={http://books.google.fi/books?id=r9x-OXdzpPcC},
-  year={2011},
-  publisher={Crown Business}
+@incollection{mason_semistructured_2004,
+  edition = {0},
+  title = {Semistructured Interview},
+  url = {http://srmo.sagepub.com/view/ the-sage-encyclopedia-of-social-science-research-methods/n909.xml.},
+  booktitle = {Semistructured Interview},
+  publisher = {Sage Publications, Inc},
+  author = {Mason, Jennifer},
+  year = {2004},
+  pages = {1021--1022}
 }
 
-
-@ONLINE{blank2010startup,
-author = {Steve Blank},
-title = {What’s A Startup? {F}irst Principles.},
-howpublished = {[WWW]. [accessed at 26.12.2013]. Available at: http://steveblank.com/2010/01/25/whats-a-startup-first-principles/ }
+@techreport{taivalsaari_mashware:_2009,
+  address = {Mountain View, {CA}, {USA}},
+  title = {Mashware: The Future of Web Applications},
+  url = {http://dl.acm.org/citation.cfm?id=1698213&CFID=448668171&CFTOKEN=63037616},
+  institution = {Sun Microsystems, Inc.},
+  author = {Taivalsaari, Antero},
+  year = {2009}
 }
 
-
-@ONLINE{campionDescCheck,
-author = {O'Neil Hibbert, Campion College},
-title = {Desk Check Guide},
-url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-solving-and-programming/desk-check-guide}
+@book{kuniavsky_observing_2003,
+  title = {Observing the User Experience: A Practitioner's Guide to User Research},
+  isbn = {9781558609235},
+  shorttitle = {Observing the User Experience},
+  abstract = {The gap between who designers and developers imagine their users are, and who those users really are can be the biggest problem with product development. Observing the User Experience will help you bridge that gap to understand what your users want and need from your product, and whether they'll be able to use what you've created. Filled with real-world experience and a wealth of practical information, this book presents a complete toolbox of techniques to help designers and developers see through the eyes of their users. It provides in-depth coverage of 13 user experience research techniques that will provide a basis for developing better products, whether they're Web, software or mobile based. In addition, it's written with an understanding of how software is developed in the real world, taking tight budgets, short schedules, and existing processes into account. ·Explains how to create usable products that are still original, creative, and unique·A valuable resource for designers, developers, project managers-anyone in a position where their work comes in direct contact with the end user.·Provides a real-world perspective on research and provides advice about how user research can be done cheaply, quickly and how results can be presented persuasively·Gives readers the tools and confidence to perform user research on their own designs and tune their software user experience to the unique needs of their product and its users},
+  language = {en},
+  publisher = {Morgan Kaufmann},
+  author = {Kuniavsky, Mike},
+  year = {2003},
+  keywords = {Computers / Reference}
 }
 
-
-@ONLINE{futuricefact,
-author = {Futurice},
-title = {Futurice - {F}act Sheet},
-howpublished = {[WWW]. [accessed at 28.3.2014]. Available at: http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf }
-}
-
-
-@book{poppendieck2006implementing,
-  title={Implementing Lean Software Development: From Concept to Cash},
-  author={Poppendieck, M. and Poppendieck, T.},
-  isbn={9780133812848},
-  series={Addison-Wesley Signature Series (Beck)},
-  url={http://books.google.fi/books?id=RTt9AgAAQBAJ},
-  year={2006},
-  publisher={Pearson Education}
-}
-
-@book{poppendieck2003LSD,
- author = {Poppendieck, Mary and Poppendieck, Tom},
- title = {Lean Software Development: An Agile Toolkit},
- year = {2003},
- isbn = {0321150783},
- publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
-}
-
-@book{clark1991product,
-  title={Product Development Performance: Strategy, Organization, and Management in the World Auto Industry},
-  author={Clark, K.B. and Fujimoto, T.},
-  isbn={9780875842455},
-  lccn={90047967},
-  url={http://books.google.fi/books?id=7cCAASTW6IQC},
-  year={1991},
-  publisher={Harvard Business School Press}
-}
-
-@book{crosby1980quality,
-  title={Quality is free: the art of making quality certain},
-  author={Crosby, P.B.},
-  isbn={9780451622471},
-  lccn={79089296},
-  series={Mentor executive library},
-  url={http://books.google.fi/books?id=abM4662\_lF4C},
-  year={1980},
-  publisher={New American Library}
-}
-
-@ONLINE{stareastcrispin,
-author = {Lisa Crispin},
-title = {STAREAST: Agile testing and defect tracking},
-howpublished = {[WWW]. [accessed at 29.3.2014]. Available at: http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking }
-}
-
-@ONLINE{kloctofp,
-author = {Quantitative Software Management Inc.},
-title = {Function Point Languages Table},
-howpublished = {[WWW]. [accessed at 12.3.2014]. Available at: http://www.qsm.com/resources/function-point-languages-table }
-}
-
-@book{iso25010, 
-Author = {ISO{~}25010}, 
-publisher = {ISO, Geneva, Switzerland},
-Title = {Systems and software engineering — Systems and software Quality Requirements and Evaluation (SQuaRE) — System and software quality models},
-year = {2011},
-}
-
-
-@book{iso9126, 
-Author = {ISO{~}9126}, 
-publisher = {ISO, Geneva, Switzerland},
-Title = {Software engineering -- Product quality -- Part 1: Quality model},
-year = {2001},
+@misc{_html_????,
+  title = {{HTML} Specification: Offline Web Applications},
+  url = {https://html.spec.whatwg.org/multipage/browsers.html#offline},
+  urldate = {2014-10-27}
 }
