--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -13,6 +13,12 @@
 % kuvatekstien kirjasinkoko ja asettelu
 \usepackage[small]{caption}
 
+% koodilistauksia varten tarvittavat hässäkät
+\usepackage{listings}
+\captionsetup[lstlisting]{ format=listing, labelfont=white, textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize} }
+
+
+
 % omia käskyjä voi lisätä tähän väliin, esim. \newcommand{\angs}{\textsl{\AA}}
 
 \pagenumbering{Roman}
