Reconstructing the structure based on Mikkola's instructions

--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -3,7 +3,7 @@
 % LaTeX-tiedosto opinnäytepohjaksi
 % Tekijä: Sami Paavilainen
 % Muokkaaja: Heikki Huttunen (heikki.huttunen@tut.fi) 31.7.2012.
-% Lisämuokkaajat: Mikko Pohja & Miro Nieminen
+% Lisämuokkaajat: Mikko Pohja & Miro Nieminen ~2014
  
 % Vaatii lisäksi luokkatiedoston tutthesis.cls
 % sekä tiedoston tty-logo.pdf (pdflatex) tai tty-logo-eps (latex)
@@ -37,12 +37,17 @@
  
 
 %% ---------------------------------------
-%% Related Research
-\input{chapters/c_related_research}
+%% Background
+\input{chapters/c_background}
 
 
 %% ---------------------------------------
-%% Methods 
+%% Case Päikky
+\input{chapters/c_case}
+
+
+%% ---------------------------------------
+%% Research Methods 
 \input{chapters/c_methods}
 
  
@@ -52,8 +57,13 @@
  
 
 %% ---------------------------------------
-%% Results
+%% Evaluation: teh Results
 \input{chapters/c_evaluation}
+
+
+%% ---------------------------------------
+%% Lessons Learned
+\input{chapters/c_lessonslearned}
 
 
 %% ---------------------------------------
@@ -68,7 +78,7 @@
 
 %% ---------------------------------------
 %% Appendix
-%% <todo>
+%% hox-todo: haastispohja tänne liitteeksi
 %\appendix
 %\renewcommand{\chaptername}{Liite}
 
