Implementation v1, notes to other chapters based on it

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -41,8 +41,8 @@ e
 \textsf{Diplomityö, xx sivua}\\
 \textsf{Xxxxxkuu 2015}\\
 \textsf{Pääaine: }\\
-\textsf{Tarkastajat: }\\
-\textsf{Avainsanat: }\\
+\textsf{Tarkastajat: Tommi Mikkonen}\\
+\textsf{Avainsanat: JavaScript, Single-Page Application, }\\
 \end{spacing}
  
 \noindent
